--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script type="module" crossorigin src="http://h002298466.nichost.ru/test/index-8W1vOkfC.js"></script>
+    <script type="module" src="http://h002298466.nichost.ru/test/index-8W1vOkfC.js"></script>
   </head>
   <body>
     <p>fdsfdsfdfdfdfdfd</p>
